feat(admin): 完善总部公司部门组层级
