# server/internal/data/ent/migrate/schema.go
@@ -1184,6 +1184,7 @@ var (
 		{Name: "updated_at", Type: field.TypeTime},
 		{Name: "code", Type: field.TypeString, Size: 64},
 		{Name: "name", Type: field.TypeString, Size: 200},
+		{Name: "kind", Type: field.TypeEnum, Enums: []string{"headquarters", "company", "department", "team"}},
 		{Name: "enabled", Type: field.TypeBool, Default: true},
 		{Name: "parent_id", Type: field.TypeUUID, Nullable: true},
 	}
@@ -1195,7 +1196,7 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:     "organizations_organizations_children",
-				Columns:    []*schema.Column{OrganizationsColumns[6]},
+				Columns:    []*schema.Column{OrganizationsColumns[7]},
 				RefColumns: []*schema.Column{OrganizationsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
@@ -1214,7 +1215,7 @@ var (
 			{
 				Name:    "organization_parent_id",
 				Unique:  false,
-				Columns: []*schema.Column{OrganizationsColumns[6]},
+				Columns: []*schema.Column{OrganizationsColumns[7]},
 			},
 		},
 	}
